fix and added calc.html

--- a/app/catalog-old.html
+++ b/app/catalog-old.html
@@ -1706,8 +1706,8 @@
 
       <section class="section">
   <div class="container">
-    <form
-      class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px">
+    <form class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px"
+      data-radio-group="">
       <span
         class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center"
         style="background-image: url(./img/bg/callback.webp);"></span>
