--- a/app/product.html
+++ b/app/product.html
@@ -924,7 +924,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
@@ -1923,8 +1923,8 @@
 
       <section class="section">
   <div class="container">
-    <form
-      class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px">
+    <form class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px"
+      data-radio-group="">
       <span
         class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center"
         style="background-image: url(./img/bg/callback.webp);"></span>
