--- a/src/index.html
+++ b/src/index.html
@@ -518,7 +518,7 @@
 
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
