--- a/src/leasing.html
+++ b/src/leasing.html
@@ -287,7 +287,7 @@
 
       <section class="section position-relative z-1">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
                 Калькулятор лизинга
@@ -556,98 +556,108 @@
         <span class="d-none d-sm-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line.svg);"></span>
         <span class="d-block d-sm-none rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line--mob.svg);"></span>
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
                 5 шагов для получения оборудования в лизинг
               </h2>
             </div>
 
-            <div class="d-flex justify-content-between gap-8px">
-              <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-24px px-4px px-md-16px px-lg-20px">
-                <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                  <span class="icon w-20px w-md-40px h-20px h-lg-40px">
-                    <svg>
-                      <use xlink:href="img/icons/sale.svg#svg-sale"></use>
-                    </svg>
-                  </span>
-                  <p class="fs-8px fs-md-14px text-gray-500 m-0px">
-                    Шаг 1
-                  </p>
-                  <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                    Отправьте
-                    <br>
-                    заявку
-                  </h3>
+            <div class="d-flex flex-column gap-lg-40px gap-20px">
+              <div class="d-flex justify-content-between gap-8px">
+                <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
+                  <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
+                    <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                      <svg>
+                        <use xlink:href="img/icons/sale.svg#svg-sale"></use>
+                      </svg>
+                    </span>
+                    <p class="fs-8px fs-md-14px text-gray-500 m-0px">
+                      Шаг 1
+                    </p>
+                    <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                      Отправьте
+                      <br>
+                      заявку
+                    </h3>
+                  </div>
+                </div>
+                <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
+                  <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
+                    <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                      <svg>
+                        <use xlink:href="img/icons/calendar.svg#svg-calendar"></use>
+                      </svg>
+                    </span>
+                    <p class="fs-8px fs-md-14px text-gray-500 m-0px">
+                      Шаг 2
+                    </p>
+                    <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                      Дождитесь одобрения и&nbsp;получите коммерческое предложение
+                    </h3>
+                  </div>
+                </div>
+                <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
+                  <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
+                    <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                      <svg>
+                        <use xlink:href="img/icons/rubles.svg#svg-rubles"></use>
+                      </svg>
+                    </span>
+                    <p class="fs-8px fs-md-14px text-gray-500 m-0px">
+                      Шаг 3
+                    </p>
+                    <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                      Подготовьте
+                      <br>
+                      документы
+                    </h3>
+                  </div>
+                </div>
+                <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
+                  <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
+                    <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                      <svg>
+                        <use xlink:href="img/icons/profit.svg#svg-profit"></use>
+                      </svg>
+                    </span>
+                    <p class="fs-8px fs-md-14px text-gray-500 m-0px">
+                      Шаг 4
+                    </p>
+                    <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                      Внесите
+                      <br>
+                      авансовый
+                      <br>
+                      платеж
+                    </h3>
+                  </div>
+                </div>
+                <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-lg-24px px-4px px-md-16px px-lg-20px">
+                  <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
+                    <span class="icon w-20px w-md-40px h-20px h-lg-40px">
+                      <svg>
+                        <use xlink:href="img/icons/profit.svg#svg-profit"></use>
+                      </svg>
+                    </span>
+                    <p class="fs-8px fs-md-14px text-gray-500 m-0px">
+                      Шаг 5
+                    </p>
+                    <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
+                      Получите
+                      <br>
+                      оборудование
+                    </h3>
+                  </div>
                 </div>
               </div>
-              <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-24px px-4px px-md-16px px-lg-20px">
-                <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                  <span class="icon w-20px w-md-40px h-20px h-lg-40px">
-                    <svg>
-                      <use xlink:href="img/icons/calendar.svg#svg-calendar"></use>
-                    </svg>
-                  </span>
-                  <p class="fs-8px fs-md-14px text-gray-500 m-0px">
-                    Шаг 2
-                  </p>
-                  <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                    Дождитесь одобрения и&nbsp;получите коммерческое предложение
-                  </h3>
-                </div>
-              </div>
-              <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-24px px-4px px-md-16px px-lg-20px">
-                <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                  <span class="icon w-20px w-md-40px h-20px h-lg-40px">
-                    <svg>
-                      <use xlink:href="img/icons/rubles.svg#svg-rubles"></use>
-                    </svg>
-                  </span>
-                  <p class="fs-8px fs-md-14px text-gray-500 m-0px">
-                    Шаг 3
-                  </p>
-                  <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                    Подготовьте
-                    <br>
-                    документы
-                  </h3>
-                </div>
-              </div>
-              <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-24px px-4px px-md-16px px-lg-20px">
-                <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                  <span class="icon w-20px w-md-40px h-20px h-lg-40px">
-                    <svg>
-                      <use xlink:href="img/icons/profit.svg#svg-profit"></use>
-                    </svg>
-                  </span>
-                  <p class="fs-8px fs-md-14px text-gray-500 m-0px">
-                    Шаг 4
-                  </p>
-                  <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                    Внесите
-                    <br>
-                    авансовый
-                    <br>
-                    платеж
-                  </h3>
-                </div>
-              </div>
-              <div class="glass mw-240px w-100 bg-white bg-opacity-10 rounded-12px py-12px py-md-20px py-24px px-4px px-md-16px px-lg-20px">
-                <div class="d-flex flex-column gap-8px gap-md-16px gap-lg-24px">
-                  <span class="icon w-20px w-md-40px h-20px h-lg-40px">
-                    <svg>
-                      <use xlink:href="img/icons/profit.svg#svg-profit"></use>
-                    </svg>
-                  </span>
-                  <p class="fs-8px fs-md-14px text-gray-500 m-0px">
-                    Шаг 5
-                  </p>
-                  <h3 class="fs-8px fs-md-14px fs-lg-16px fw-bold lh-normal m-0px">
-                    Получите
-                    <br>
-                    оборудование
-                  </h3>
-                </div>
+
+              <div class="d-none d-md-flex justify-content-center">
+                <button type="button" class="btn btn-40px btn-gradient-warm btn-bg-gradient btn-border-gradient"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modal-order">
+                  Связаться
+                </button>
               </div>
             </div>
           </div>
@@ -656,7 +666,7 @@
 
       <section class="section">
         <div class="container">
-          <div class="d-flex flex-column gap-32px">
+          <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
                 <a href="./" class="btn btn-plaintext btn-title">
