--- a/app/catalog-2.html
+++ b/app/catalog-2.html
@@ -175,13 +175,13 @@
         <div class="d-flex flex-column flex-sm-row justify-content-between gap-16px bg-gradient-hero-top bg-sm-reset rounded-16px p-16px p-sm-0px pb-8px pb-sm-0px rounded-sm-0px position-relative overflow-hidden overflow-sm-visible">
           <div class="pt-lg-64px pt-4px pb-sm-32px">
             <div class="d-flex flex-column align-items-start gap-lg-40px gap-md-32px gap-20px">
-              <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px">
+              <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px fs-lg-16px">
                 <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
                   Газопоршневые <br> установки
                 </h2>
                 
               </div>
-              <div class="d-flex d-sm-none flex-column gap-16px fs-12px">
+              <div class="d-flex d-sm-none flex-column gap-16px fs-12px fs-lg-16px">
                 <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
                   Калькулятор доходности
                 </h2>
@@ -1844,8 +1844,8 @@
 
       <section class="section">
   <div class="container">
-    <form
-      class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px">
+    <form class="d-flex flex-column gap-lg-40px gap-md-32px gap-28px rounded-lg-16px rounded-10px position-relative z-1 py-32px py-md-32px py-lg-48px px-12px"
+      data-radio-group="">
       <span
         class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center"
         style="background-image: url(./img/bg/callback.webp);"></span>
