fix and added factoring.html

--- a/app/index.html
+++ b/app/index.html
@@ -195,9 +195,9 @@
                         О Рустехмаш в цифрах
                       </h4>
 
-                      <div class="glass flex-fill bg-white bg-opacity-10 rounded-pill py-8px py-md-12px py-lg-20px px-20px px-lg-32px">
+                      <div class="glass flex-fill bg-white bg-opacity-10 rounded-24px rounded-sm-pill py-8px py-md-12px py-lg-20px px-16px px-sm-20px px-lg-32px">
                         <div class="d-flex justify-content-between gap-16px">
-                          <div class="d-flex flex-column fs-6px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
                             <h5 class="d-flex align-items-baseline gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               10 <span class="fw-10px fs-lg-14px">лет</span>
                             </h5>
@@ -205,7 +205,7 @@
                               Работы в индустрии
                             </p>
                           </div>
-                          <div class="d-flex flex-column fs-6px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
                             <h5 class="d-flex align-items-center gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               5000 <span class="fs-14px fs-lg-20px">+</span>
                             </h5>
@@ -213,7 +213,7 @@
                               Клиентов
                             </p>
                           </div>
-                          <div class="d-flex flex-column fs-6px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
                             <h5 class="d-flex align-items-center gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               160МВт
                             </h5>
