--- a/app/product.html
+++ b/app/product.html
@@ -845,7 +845,7 @@
                     </div>
                     <div class="d-flex gap-12px gap-lg-16px gap-xl-20px">
                       <div class="flex-grow-sm-0 flex-grow-1 d-flex flex-column justify-content-between gap-4px fw-medium">
-                        <p class="fs-8px fs-lg-12px lh-1 m-0px">
+                        <p class="fs-10px fs-lg-12px lh-1 m-0px">
                           Общая мощность фермы:
                         </p>
                         <p class="fs-20px fs-md-16px fs-lg-24px text-teal text-nowrap m-0px">
@@ -853,7 +853,7 @@
                         </p>
                       </div>
                       <div class="flex-grow-sm-0 flex-grow-1 d-flex flex-column justify-content-between gap-4px fw-medium">
-                        <p class="fs-8px fs-lg-12px lh-1 m-0px">
+                        <p class="fs-10px fs-lg-12px lh-1 m-0px">
                           Суммарный хешрейт фермы:
                         </p>
                         <p class="fs-20px fs-md-16px fs-lg-24px text-teal text-nowrap m-0px">
@@ -861,7 +861,7 @@
                         </p>
                       </div>
                       <div class="flex-grow-sm-0 flex-grow-1 d-flex flex-column justify-content-between gap-4px fw-medium">
-                        <p class="fs-8px fs-lg-12px lh-1 m-0px">
+                        <p class="fs-10px fs-lg-12px lh-1 m-0px">
                           Потребление фермы:
                         </p>
                         <p class="fs-20px fs-md-16px fs-lg-24px text-teal text-nowrap m-0px">
@@ -876,30 +876,30 @@
                       <source srcset="./img/indicators/image-1.webp" type="image/webp">
                       <img loading="lazy" src="./img/indicators/image-1.png" class="img-fluid" width="360" height="240" alt="Картинка">
                     </picture>
-                    <div class="glass bg-white bg-opacity-5 mt-n24px mt-lg-n40px rounded-pill py-14px px-24px py-sm-8px px-sm-16px py-lg-14px px-lg-24px">
+                    <div class="glass bg-white bg-opacity-5 mt-n24px mt-lg-n40px rounded-24px rounded-xl-pill py-14px px-16px px-sm-20px px-xl-24px">
                       <div class="row g-10px g-lg-16px">
-                        <div class="col-6 col-sm-auto col-lg-6 col-xl-auto">
+                        <div class="col-6 col-xl-auto">
                           <div class="h-100 d-flex flex-column lh-sm">
-                            <p class="fs-8px fs-md-6px fs-lg-10px fw-medium m-0px">CAPEX</p>
-                            <p class="fs-10px fs-md-8px fs-lg-12px fw-bold m-0px">1 200 000 $</p>
+                            <p class="fs-10px fw-medium m-0px">CAPEX</p>
+                            <p class="fs-12px fw-bold m-0px">1 200 000 $</p>
                           </div>
                         </div>
-                        <div class="col-6 col-sm-auto col-lg-6 col-xl-auto">
+                        <div class="col-6 col-xl-auto">
                           <div class="d-flex flex-column lh-sm">
-                            <p class="fs-8px fs-md-6px fs-lg-10px fw-medium m-0px">ГОДОВАЯ ДОБЫЧА, $</p>
-                            <p class="fs-10px fs-md-8px fs-lg-12px fw-bold m-0px">1 200 000 $</p>
+                            <p class="fs-10px fw-medium m-0px">ГОДОВАЯ ДОБЫЧА, $</p>
+                            <p class="fs-12px fw-bold m-0px">1 200 000 $</p>
                           </div>
                         </div>
-                        <div class="col-6 col-sm-auto col-lg-6 col-xl-auto">
+                        <div class="col-6 col-xl-auto">
                           <div class="d-flex flex-column lh-sm">
-                            <p class="fs-8px fs-md-6px fs-lg-10px fw-medium m-0px">ЧИСТАЯ ПРИБЫЛЬ, $</p>
-                            <p class="fs-10px fs-md-8px fs-lg-12px fw-bold m-0px">100 000 $ млн/год</p>
+                            <p class="fs-10px fw-medium m-0px">ЧИСТАЯ ПРИБЫЛЬ, $</p>
+                            <p class="fs-12px fw-bold m-0px">100 000 $ млн/год</p>
                           </div>
                         </div>
-                        <div class="col-6 col-sm-auto col-lg-6 col-xl-auto">
+                        <div class="col-6 col-xl-auto">
                           <div class="d-flex flex-column lh-sm">
-                            <p class="fs-8px fs-md-6px fs-lg-10px fw-medium m-0px">ROI</p>
-                            <p class="fs-10px fs-md-8px fs-lg-12px fw-bold m-0px">12,4 мес</p>
+                            <p class="fs-10px fw-medium m-0px">ROI</p>
+                            <p class="fs-12px fw-bold m-0px">12,4 мес</p>
                           </div>
                         </div>
                       </div>
@@ -911,7 +911,7 @@
                     Получить предложение
                   </button>
 
-                  <div class="d-none d-md-block fs-8px fs-lg-12px text-white-50">
+                  <div class="d-none d-md-block fs-10px fs-lg-12px text-white-50">
                     <p>
                       Расчет носит исключительно информационный характер и не является публичной офертой.
                     </p>
