--- a/app/catalog.html
+++ b/app/catalog.html
@@ -176,13 +176,13 @@
           <div class="pt-lg-64px pt-4px pb-sm-32px">
             <div class="d-flex flex-column align-items-start gap-lg-40px gap-md-32px gap-20px">
               <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px fs-lg-16px">
-                <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
+                <h2 class="fs-xl-50px fs-lg-36px fs-md-28px fs-20px">
                   Газопоршневые <br> установки
                 </h2>
                 
               </div>
               <div class="d-flex d-sm-none flex-column gap-16px fs-12px fs-lg-16px">
-                <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
+                <h2 class="fs-xl-50px fs-lg-36px fs-md-28px fs-20px">
                   Калькулятор доходности
                 </h2>
                 
