--- a/src/calc.html
+++ b/src/calc.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
 
-@include('partials/head.html', {title: 'Лизинг'})
+@include('partials/head.html', {title: 'Калькулятор доходности'})
 
 <body class="page-body">
-  @include('partials/h1.html', {title: 'Лизинг'})
+  @include('partials/h1.html', {title: 'Калькулятор доходности'})
 
   <div class="site-container">
     @include('partials/header.html')
@@ -522,7 +522,7 @@
           <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
               <h2 class="d-flex mb-0px fs-24px fs-lg-36px fw-medium lh-1">
-                5 шагов для получения оборудования в лизинг
+                Рассчитать и оформить
               </h2>
             </div>
 
