--- a/app/index.html
+++ b/app/index.html
@@ -197,15 +197,15 @@
 
                       <div class="glass flex-fill bg-white bg-opacity-10 rounded-24px rounded-sm-pill py-8px py-md-12px py-lg-20px px-16px px-sm-20px px-lg-32px">
                         <div class="d-flex justify-content-between gap-16px">
-                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-12px lh-normal">
                             <h5 class="d-flex align-items-baseline gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               10 <span class="fw-10px fs-lg-14px">лет</span>
                             </h5>
                             <p class="m-0px">
-                              Работы в индустрии
+                              Работы в&nbsp;индустрии
                             </p>
                           </div>
-                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-12px lh-normal">
                             <h5 class="d-flex align-items-center gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               5000 <span class="fs-14px fs-lg-20px">+</span>
                             </h5>
@@ -213,7 +213,7 @@
                               Клиентов
                             </p>
                           </div>
-                          <div class="d-flex flex-column fs-10px fs-lg-8px lh-normal">
+                          <div class="d-flex flex-column fs-10px fs-lg-12px lh-normal">
                             <h5 class="d-flex align-items-center gap-4px fs-20px fs-md-16px fs-lg-24px fs-xl-32px fw-semibold fw-semibold fw-semibold lh-reset m-0px">
                               160МВт
                             </h5>
