--- a/app/factoring.html
+++ b/app/factoring.html
@@ -297,8 +297,7 @@
       </section>
 
       <section class="section position-relative z-1">
-        <span class="d-none d-sm-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line.svg);"></span>
-        <span class="d-block d-sm-none rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line--mob.svg);"></span>
+        <span class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-contain bg-repeat-x-repeat bg-position-center" style="background-image: url(./img/bg/line.svg);"></span>
         <div class="container">
           <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
@@ -405,7 +404,7 @@
             </div>
             <div class="col-md-6">
               <div class="h-100 d-flex flex-column gap-10px gap-lg-8px">
-                <div class="min-h-96px d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
+                <div class="min-h-96px flex-fill d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
                   <div class="d-flex flex-column gap-4px gap-md-8px">
                     <h3 class="fs-16px fs-md-20px lh-reset m-0px">
                       Управляйте отсрочкой платежа
@@ -415,7 +414,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="min-h-96px d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
+                <div class="min-h-96px flex-fill d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
                   <div class="d-flex flex-column gap-4px gap-md-8px">
                     <h3 class="fs-16px fs-md-20px lh-reset m-0px">
                       Улучшайте отношения с поставщиками
@@ -425,7 +424,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="min-h-96px d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
+                <div class="min-h-96px flex-fill d-flex align-items-center fs-12px fs-md-14px lh-normal bg-white rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
                   <div class="d-flex flex-column gap-4px gap-md-8px">
                     <h3 class="fs-16px fs-md-20px lh-reset m-0px">
                       Снижайте издержки по управлению кредиторкой
@@ -435,7 +434,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="min-h-96px d-flex align-items-center fs-12px fs-md-14px lh-normal bg-gradient-teal-400 bg-opacity-50 rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
+                <div class="min-h-96px flex-fill d-flex align-items-center fs-12px fs-md-14px lh-normal bg-gradient-teal-400 bg-opacity-50 rounded-16px p-14px py-md-12px py-lg-28px px-md-20px px-lg-24px">
                   <div class="d-flex flex-column gap-4px gap-md-8px">
                     <h3 class="fs-16px fs-md-20px lh-reset m-0px">
                       100% финансирование ваших закупок
