--- a/src/calc.html
+++ b/src/calc.html
@@ -516,8 +516,7 @@
       </section>
 
       <section class="section position-relative z-1">
-        <span class="d-none d-sm-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line.svg);"></span>
-        <span class="d-block d-sm-none rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-center" style="background-image: url(./img/bg/line--mob.svg);"></span>
+        <span class="d-none d-md-block rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-contain bg-repeat-x-repeat bg-position-center" style="background-image: url(./img/bg/line.svg);"></span>
         <div class="container">
           <div class="d-flex flex-column gap-16px gap-lg-32px">
             <div class="d-flex">
